WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134030
[WinCairo] Compile errors when trying to compile CA code.
https://bugs.webkit.org/show_bug.cgi?id=134030
Summary
[WinCairo] Compile errors when trying to compile CA code.
peavo
Reported
2014-06-18 09:30:40 PDT
WinCairo does not USE(CA).
Attachments
Patch
(2.72 KB, patch)
2014-06-18 09:33 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-06-18 09:33:52 PDT
Created
attachment 233310
[details]
Patch
Brent Fulgham
Comment 2
2014-06-18 10:04:07 PDT
Comment on
attachment 233310
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=233310&action=review
> Source/WebCore/WebCore.vcxproj/WebCore.vcxproj:7233 > + <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_WinCairo|Win32'">true</ExcludedFromBuild>
Whoops! Sorry :-(
peavo
Comment 3
2014-06-18 10:10:08 PDT
(In reply to
comment #2
)
> (From update of
attachment 233310
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=233310&action=review
> > > Source/WebCore/WebCore.vcxproj/WebCore.vcxproj:7233 > > + <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_WinCairo|Win32'">true</ExcludedFromBuild> > > Whoops! Sorry :-(
No worries, thanks for looking into this, guys :)
WebKit Commit Bot
Comment 4
2014-06-18 10:21:07 PDT
Comment on
attachment 233310
[details]
Patch Clearing flags on attachment: 233310 Committed
r170103
: <
http://trac.webkit.org/changeset/170103
>
WebKit Commit Bot
Comment 5
2014-06-18 10:21:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug