[WinCairo] Compile errors when trying to compile CA code. https://bugs.webkit.org/show_bug.cgi?id=134030

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-06-18
Reviewed by Simon Fraser.

WinCairo does not USE(CA).

* WebCore.vcxproj/WebCore.vcxproj:
* platform/graphics/ca/TileController.h:

Canonical link: https://commits.webkit.org/151971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170103 268f45cc-cd09-0410-ab3c-d52691b4dbfc